xanho-backend/deploy/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: xanho-backend
  name: xanho-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xanho-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: xanho-backend
        actorSystemName: xanho-backend
    spec:
      serviceAccountName: xanho-backend-sa
      automountServiceAccountToken: true
      volumes:
        - name: certs
          secret:
            secretName: xanho-backend-internal
        - name: credentials
          secret:
            secretName: xanho-credentials
      containers:
        - name: xanho-backend
          image: gcr.io/PROJECT_ID/IMAGE:TAG
          ports:
            - name: remoting
              containerPort: 25520
              protocol: TCP
            - name: management
              containerPort: 8558
              protocol: TCP
            - name: app
              containerPort: 8443
              protocol: TCP
            - name: healthcheck
              containerPort: 8444
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: /alive
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 20
          resources:
            requests:
              memory: 768Mi
            limits:
              memory: 768Mi
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/xanho
            - name: credentials
              mountPath: /etc/ssl/xanho-credentials
