xanho-backend/deploy/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: xanho-backend
  name: xanho-backend
  annotations:
    cloud.google.com/app-protocols: '{"app":"HTTP2", "healthcheck": "HTTP2"}'
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "xanho-backend-healthcheck"}'
spec:
  type: ClusterIP
  ports:
    - name: healthcheck
      port: 444
      targetPort: 8444
    - name: app
      port: 443
      targetPort: 8443
  selector:
    app: xanho-backend
